# scanner

./: .gitignore  .replit  app.py  pyproject.toml  replit.md
static/: script.js  style.css
templates/: index.html
